@@ -17,3 +17,19 @@ CREATE TABLE tx_solr_indexqueue_item (
 	KEY changed (changed),
 	KEY item_id (item_type,item_uid)
 );
+
+
+#
+# Table structure for table 'tx_solr_indexqueue_indexing_property'
+#
+CREATE TABLE tx_solr_indexqueue_indexing_property (
+	uid int(11) NOT NULL auto_increment,
+
+	item_id int(11) NOT NULL,
+
+	property_key varchar(255) NOT NULL,
+	property_value mediumtext NOT NULL,
+
+	PRIMARY KEY (uid),
+	KEY item_id (item_id)
+);
