@@ -1,5 +1,6 @@
 2012-02-14  Ingo Renner  <ingo.renner@dkd.de>
 
+	* Added initial API for Index Queue Item Indexing Properties
 	* Added Polish Translations, credits Jan Slusarczyk
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
